# GalaxyMerge

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Galaxy_Merge_Harness_Complete_System_Book.md  README.md  SECURITY.md  gm  pyproject.toml
.github/workflows/: ci.yml  security.yml
config/: README.md  fusion.example.json  models.example.json  providers.example.json  routing.example.json
docs/: 00-index.md  01-project-overview.md  README.md
docs/02-architecture/: README.md  data-flow.md  dependency-map.md  module-map.md  process-lifecycle.md  runtime-flow.md
docs/03-api-and-interfaces/: README.md  cli.md  routes.md  schemas-and-types.md  websocket.md
docs/04-implementation/: README.md  concurrency.md  configuration.md  council-and-fusion.md  logging-and-errors.md  persistence-and-state.md  safety-model.md  security-boundaries.md
docs/05-operations/: build-and-run.md  deployment.md  testing-and-verification.md  troubleshooting.md
docs/06-maintenance/: documentation-changelog.md  known-issues.md  unfinished-work.md  unknowns.md
galaxy_merge/: __main__.py
galaxy_merge/app/: browser.py  council_api.py  launcher.py  lifecycle.py  notes_api.py  payloads.py  ports.py  server.py
galaxy_merge/browser/: cdp.py  console_logs.py  dom.py  manager.py  network_logs.py  page_errors.py  screenshots.py
galaxy_merge/cache/: file_cache.py  fusion_cache.py  keys.py  provider_cache.py  store.py
galaxy_merge/core/: concurrency.py  config.py  errors.py  events.py  goal.py  locks.py  opencode_import.py  orchestrator.py  planner.py  prompt_builder.py  runtime_models.py  session.py
galaxy_merge/fusion/: council.py  reviewer.py  roles.py  router.py  schemas.py  scoring.py  synthesizer.py
galaxy_merge/git/: checkpoints.py  diffs.py  repo.py
galaxy_merge/github/: scanner.py
galaxy_merge/locations/: classifier.py  deployment_policy.py  registry.py
galaxy_merge/memory/: compaction.py  project_memory.py  retrieval.py  session_memory.py  store.py
galaxy_merge/providers/: base.py  local_ollama.py  mock.py  openai_compat.py  registry.py
galaxy_merge/safety/: audit.py  command_inspector.py  command_policy.py  credential_policy.py  governor.py  path_policy.py  path_utils.py  sandbox.py  self_protection.py
galaxy_merge/skills/: discovery.py  matcher.py  registry.py
galaxy_merge/tests/: conftest.py  test_audit_regressions.py  test_backend_runtime.py  test_browser.py  test_cache.py  test_concurrency.py  test_config.py  test_degraded_fusion_metadata.py  test_fusion.py  test_fusion_council.py  test_git.py  test_github.py  test_gm_structure.py  test_goal.py  test_gui_js_syntax.py  test_gui_null_safety.py  test_install_flow.py  test_integration.py  test_kernel_extended.py  test_locations.py  test_memory.py  test_mock_provider.py  test_notes_persistence.py  test_opencode_import.py  test_planner.py  test_ports.py  test_prompt_builder.py  test_provider_config.py  test_provider_env_safety.py  test_public_repo_safety.py  test_redteam_provider_reliability.py  test_redteam_safety.py  test_redteam_safety_v2.py  test_redteam_safety_v4.py  test_redteam_v3_comprehensive.py  test_reviewer.py  test_safety.py  test_safety_governor.py  test_server_asgi.py  test_token_economy.py  (+4 more)
galaxy_merge/token/: __init__.py  budget.py  segments.py
galaxy_merge/tools/: browser_tools.py  completion_tools.py  council_tools.py  file_tools.py  git_tools.py  github_tools.py  index_tools.py  kernel.py  location_tools.py  memory_tools.py  notes_tools.py  provider_tools.py  schemas.py  security_tools.py  shell_tools.py  skill_tools.py  verification_tools.py  web_tools.py
galaxy_merge/web/: duckduckgo.py  (+3 more)
scripts/: acceptance_full_matrix.sh  acceptance_provider_degradation.sh  acceptance_webapp_repair.sh  install_local.sh  secret_scan.py  secret_scan.sh  smoke_test.sh  uninstall_local.sh
(+26 files in other folders)
