[project]
name = "galaxy-merge"
version = "0.1.0"
description = "Self-contained Linux-native autonomous coding harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=5.0.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
gm = "galaxy_merge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["galaxy_merge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["galaxy_merge/tests"]
