[project]
name = "galaxy-merge"
version = "0.1.0"
description = "Self-contained Linux-native autonomous coding harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=5.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
gm = "galaxy_merge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["galaxy_merge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["galaxy_merge/tests"]
timeout = 15
timeout_method = "thread"
addopts = "--strict-markers -m 'not network and not browser and not provider and not slow'"
markers = [
    "unit: Fast pure-logic tests (no network, no subprocess, no browser).",
    "integration: Backend/API/tool interaction tests with temp filesystems.",
    "e2e: Full gm smoke flows with real subprocesses.",
    "slow: Tests that take longer than 10 seconds.",
    "browser: Tests requiring Playwright/Selenium or real browser automation.",
    "network: Tests making real network calls (web search, GitHub API).",
    "provider: Tests requiring real LLM provider connections.",
]
