[project]
name = "galaxy-merge"
version = "0.1.0"
description = "Self-contained Linux-native autonomous coding harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
gm = "galaxy_merge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["galaxy_merge"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["galaxy_merge/tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--durations=20",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: pure unit tests with no I/O, no subprocesses, no real network",
    "integration: backend/tool interactions using TestClient and fakes",
    "e2e: full gm smoke flow with isolated temp project",
    "slow: long-running tests that may need opt-in CI",
    "browser: tests that touch browser manager / CDP / headless driver",
    "network: tests that hit real network endpoints (skipped by default)",
    "provider: tests that exercise provider adapters via real HTTP (skipped by default)",
    "github: tests that touch GitHub API",
]
timeout = 30
timeout_method = "thread"